--- a/ruoyi-admin/pom.xml
+++ b/ruoyi-admin/pom.xml
@@ -65,6 +65,12 @@
 
         <dependency>
             <groupId>com.ruoyi</groupId>
+            <artifactId>ruoyi-inform</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.ruoyi</groupId>
             <artifactId>ruoyi-echarts</artifactId>
             <version>3.8.5</version>
         </dependency>
