--- a/ruoyi-inform/pom.xml
+++ b/ruoyi-inform/pom.xml
@@ -1,20 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<artifactId>ruoyi</artifactId>
 		<groupId>com.ruoyi</groupId>
 		<version>3.8.5</version>
 	</parent>
-	<groupId>com.ruoyi</groupId>
+	<modelVersion>4.0.0</modelVersion>
+
 	<artifactId>ruoyi-inform</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
-	<name>ruoyi-inform</name>
-	<description>ruoyi-inform</description>
-	<properties>
-		<java.version>1.8</java.version>
-	</properties>
+
 	<dependencies>
 
 		<dependency>
@@ -30,13 +25,8 @@
 		</dependency>
 	</dependencies>
 
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
-			</plugin>
-		</plugins>
-	</build>
-
+	<properties>
+		<maven.compiler.source>8</maven.compiler.source>
+		<maven.compiler.target>8</maven.compiler.target>
+	</properties>
 </project>
