--- a/ruoyi-map/pom.xml
+++ b/ruoyi-map/pom.xml
@@ -2,32 +2,32 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
     <parent>
-        <artifactId>ruoyi</artifactId>
         <groupId>com.ruoyi</groupId>
+        <artifactId>ruoyi</artifactId>
         <version>3.8.5</version>
     </parent>
-    <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>ruoyi-video</artifactId>
+    <groupId>org.example</groupId>
+    <artifactId>ruoyi-map</artifactId>
 
 
     <dependencies>
-        <!-- 通用工具-->
+        <dependency>
+            <groupId>com.ruoyi</groupId>
+            <artifactId>ruoyi-system</artifactId>
+        </dependency>
+
         <dependency>
             <groupId>com.ruoyi</groupId>
             <artifactId>ruoyi-common</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>com.aliyun.oss</groupId>
-            <artifactId>aliyun-sdk-oss</artifactId>
-            <version>3.15.1</version>
-            <scope>compile</scope>
         </dependency>
     </dependencies>
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
 </project>
