--- a/ruoyi-ui/package.json
+++ b/ruoyi-ui/package.json
@@ -52,11 +52,13 @@
     "quill": "1.3.7",
     "screenfull": "5.0.2",
     "sortablejs": "1.10.2",
+    "video.js": "^8.3.0",
     "vue": "2.6.12",
     "vue-count-to": "1.0.13",
     "vue-cropper": "0.5.5",
     "vue-meta": "2.4.0",
     "vue-router": "3.4.9",
+    "vue-video-player": "^5.0.1",
     "vuedraggable": "2.24.3",
     "vuex": "3.6.0"
   },
@@ -71,6 +73,7 @@
     "connect": "3.6.6",
     "eslint": "7.15.0",
     "eslint-plugin-vue": "7.2.0",
+    "less-loader": "^5.0.0",
     "lint-staged": "10.5.3",
     "runjs": "4.4.2",
     "sass": "1.32.13",
