--- a/ruoyi-admin/src/main/resources/application-druid.yml
+++ b/ruoyi-admin/src/main/resources/application-druid.yml
@@ -6,9 +6,9 @@ spring:
         druid:
             # 主库数据源
             master:
-                url: jdbc:mysql://localhost:3306/ruoyi
+                url: jdbc:mysql://localhost:3306/smart_site
                 username: root
-                password: 1234
+                password: 123456
             # 从库数据源
             slave:
                 # 从数据源开关/默认关闭
